# SSRS

./: .gitignore  .hscfg  AUTHORS.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  compute_updrafts.py  config.py  environment.yml  extract_data.py  generate_plots.py  plotting.py  preprocess.py  requirements.txt  run.sh  run_tcmodel.py  setup.cfg  simulator.py
data/: uswtdb_v3_2_20201014_codebook.xlsx
examples/: .hscfg_need_api_key  ex_Shirley2_fall_simpleheuristic.py  ex_ToTW_fall_simpleheuristic.py  ex_WVhighlands_fall_testfullmodel.py  ex_centralPA1_fall_simpleheuristic.py  ex_centralPA1_fall_testfullmodel.py  ex_centralPA2_fall_testfullmodel.py  ex_centralPA2_spring_testfullmodel.py  ex_totw_local_moves.py  example_altamontpass.py  example_appalachian.py  example_jem.py  example_wy_local_moves.py  run.py
notebooks/: .hscfg  download_grib_batch.py  extract_timestamps.ipynb  herbie-integration.ipynb  hrrr_example.ipynb  hrrr_wind_speed_direction.ipynb  sample_ssrs_simulation_wy.ipynb  sample_ssrs_uniform.ipynb  sample_terrain_appalachian.ipynb  sample_terrain_wy.ipynb  sample_wtk_wy.ipynb  ssrs_appalachian.ipynb  ssrs_wy.ipynb  terrain_appalachian.ipynb  terrain_wy.ipynb  updraft_example.ipynb  wtk_wy.ipynb  wy_tracks_validation.ipynb
ssrs/: __init__.py  actions.py  actions_local.py  config.py  heuristics.py  layers.py  movmodel.py  randomthermals.py  raster.py  simulator.py  turbines.py  utils.py
ssrs/hrrr/: HRRR GRIB2 Tables.mht  __init__.py  hrrr.py
ssrs/terrain/: __init__.py  srtm.py  terrain.py  threedep.py  wms.py
ssrs/wtk/: __init__.py  wtk.py  wtksource.py
tcfuncs/: common.py  config_tools.py  tcmodel.py  terrain.py  updrafts.py  wfarm.py  wtk.py
tests/: clean.sh  save_gold_files.sh  test.py  totw.py
tests/gold_files/TOTW_case1_2020-03-18_12Z/: y2020m03d18h12_d180_t0_fluid-flow_r0_tracks.pkl
tests/gold_files/TOTW_case2_2020-03-04_13Z/: y2020m03d04h13_d135_t0_fluid-flow_r0_tracks.pkl
tests/gold_files/TOTW_case3_2019-07-03_12Z/: y2019m07d03h12_d0_t0_fluid-flow_r0_tracks.pkl
tests/gold_files/TOTW_case4_2020-04-18_10Z/: y2020m04d18h10_d270_t0_fluid-flow_r0_tracks.pkl
tools/: common.py  terrain.py  tracks.py  updrafts.py  wfarm.py  wtk.py
workshop/: readme.html  ssrs_demo.html  ssrs_demo.ipynb  ssrs_readme.html  ssrs_readme.ipynb
