[metadata]
name = pyssrs
version = 0.1.0
license = BSD 3-Clause License
license_file = LICENSE.txt
keywords = 
    Behavior modeling
    Stochastic modeling
    agent-based movement model
    wind-wildlife interactions
    raptor conservation
    golden eagles
description = Simulating updraft-subsidized raptor movements around wind turbines
long_description = file: README.rst
author = Rimple Sandhu
author_email = rimple.sandhu@outlook.com
url = https://github.com/NREL/SSRS
platforms = any
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: GIS
[options]
packages = find:
include_package_data = True
install_requires =
        matplotlib>=3.4
        numpy>=1.21
        scipy>=1.7
        pandas>=1.3
        pathos>=0.2.8
        rasterio>=1.2
        elevation>=1.1.3
        h5py>=3.4
        h5pyd>=0.8
python_requires = >=3.7
[options.packages.find]
where = .
